# ChangeLog for net-misc/openssh
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.349 2009/04/12 21:07:56 robbat2 Exp $

  12 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
  openssh-5.2_p1-r2.ebuild:
  Switch to UID instead of hardcoded portage per bug #264841 comment.

  12 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> files/sshd.rc6:
  Bug #265491, fix opts with baselayout1.

  12 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
  openssh-5.2_p1-r1.ebuild, openssh-5.2_p1-r2.ebuild:
  Bug #264841, the ssh testsuite needs a real shell to run, so run a subset
  of tests otherwise.

  04 Apr 2009; Raúl Porcel <armin76@gentoo.org> openssh-5.2_p1-r1.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #247466

  02 Apr 2009; Markus Meier <maekke@gentoo.org> openssh-5.2_p1-r1.ebuild:
  amd64/x86 stable, bug #247466

  02 Apr 2009; Brent Baude <ranger@gentoo.org> openssh-5.2_p1-r1.ebuild:
  Marking openssh-5.2_p1-r1 ppc64 and ppc for bug 247466

  02 Apr 2009; Jeroen Roovers <jer@gentoo.org> openssh-5.2_p1-r1.ebuild:
  Stable for HPPA (bug #247466).

  11 Mar 2009; Robin H. Johnson <robbat2@gentoo.org>
  openssh-5.2_p1-r1.ebuild, openssh-5.2_p1-r2.ebuild:
  Add the SSH testsuite, because I think the latest HPN patch has a breakage
  that was missed.

*openssh-5.2_p1-r2 (09 Mar 2009)

  09 Mar 2009; Robin H. Johnson <robbat2@gentoo.org>
  +openssh-5.2_p1-r2.ebuild:
  Added my own unofficial port of the HPN patch, because performance sucks
  without it.

  25 Feb 2009; Mike Frysinger <vapier@gentoo.org> openssh-5.2_p1-r1.ebuild:
  Update pkcs11 patch #152170.

*openssh-5.2_p1-r1 (24 Feb 2009)

  24 Feb 2009; Robin H. Johnson <robbat2@gentoo.org>
  +openssh-5.2_p1-r1.ebuild:
  LPK patch updated for new OpenSSH release.

  24 Feb 2009; Mike Frysinger <vapier@gentoo.org> openssh-5.2_p1.ebuild:
  Fix X509 patching #260163 by Daniel J.

*openssh-5.2_p1 (24 Feb 2009)
