@@ -61,6 +61,6 @@ EBUILD openssh-5.0_p1-r2.ebuild 5604 RMD160 e9b6e622eb75ae7969615625b7c58482a418
 EBUILD openssh-5.1_p1-r2.ebuild 6201 RMD160 965a09b68b9e1770545a603518689d08bfd847e5 SHA1 ff4960a350c036187769b0f4f7a0ae6e55f1d889 SHA256 82ade34b3c9355aea7470a2522e9e2a40a3e7afb40d90435a5cb8d1291a6716a
 EBUILD openssh-5.1_p1-r3.ebuild 6460 RMD160 e01d68486ae63da09315a45ce8d881807938a167 SHA1 d49e2fc992a7cd5d9b2fc88bc37ad7783053dee7 SHA256 2b2098fbbf8a6cc1195d6586c35816ab11916fec3654e1235ce2d5a10ec18d13
 EBUILD openssh-5.2_p1-r1.ebuild 7608 RMD160 e1fdf601846a82ec78d52a35bd848319cb3b9853 SHA1 749088befc87438fa93b2563e41505f29871e8b4 SHA256 816c1c9fdea9e24c5527b8430c37e0de9b8bff75833ade4f602764d5980f9b05
-EBUILD openssh-5.2_p1-r2.ebuild 8190 RMD160 2fe09c489b518639ca555770a3f4d57b549307da SHA1 c8ddda464a9e74ed978bfa5379205dd723f349ce SHA256 fe3778bd40d1c65df634f2a31506b88fada59fd41c0ddf00cacd3f6efc632ae4
-MISC ChangeLog 54482 RMD160 fec78c63c7848af43e61ff59ad0d78a8da6a9706 SHA1 4d38d05a16a4358b5b28151c6e1a5c9585a7eaab SHA256 b999ba1c746edaaea2d1a3799b98889d2ce342c087c44f0cb486e1f07ff8065b
+EBUILD openssh-5.2_p1-r2.ebuild 8459 RMD160 6ec68afa256357ebfb93c1385a62d50eb77ad70b SHA1 373ba41751c8166a28026f1e1f7d5ea19ad6fe69 SHA256 0ff5aeb4f6f3bcf2db402547842677a15bad75ee7a0397234d78f67f56b0a7a8
+MISC ChangeLog 54648 RMD160 c6bde4311fa7250099bd20ab98ab5f52f051ed75 SHA1 ca8e0db40498d3ff90023eb7d5dda63b34f8c666 SHA256 ea2ec74ee6af3eb840c6300661b305b752cbd55ae55fe277fd726891eed75b4a
 MISC metadata.xml 1694 RMD160 1cf9a91557876877658f9aaab4d4b4b4ebbcc3fe SHA1 402aab3f56cd775a5443f467a73b637d03919f5c SHA256 9c65ad59ae9fb4d7f1fdbcb04d0535984dd107484eedb2e90d4331a21de680c2
