@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/openssh
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.349 2009/04/12 21:07:56 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.350 2009/04/20 05:32:10 vapier Exp $
+
+  20 Apr 2009; Mike Frysinger <vapier@gentoo.org> openssh-5.2_p1-r2.ebuild:
+  Skip pkcs11/kerberos support when USE=static by Alon Bar-Lev #266404 by
+  Jan Paesmans.
 
   12 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
   openssh-5.2_p1-r2.ebuild:
